# cell2location

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  README.md  Singularity  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  enhancement-request.md  question.md
.github/workflows/: containers.yml  test.yml
cell2location/: __init__.py  run_c2l.py  run_colocation.py  run_regression.py
cell2location/ST_simulation/: README.md  ST_simulation.py  __init__.py  assemble_composition_2.py  assemble_design_2.py  assemble_st.py  assemble_st_2.py  merge_synthetic_ST.py  run_simulation2.sh  split_sc.py
cell2location/cell_comm/: around_target.py
cell2location/cluster_averages/: __init__.py  cluster_averages.py  markers_by_hierarhy.py  select_features.py
cell2location/dataloaders/: _defined_grid_dataloader.py
cell2location/distributions/: AutoAmortisedNormalMessenger.py  AutoNormal.py  AutoNormalEncoder.py  Gamma.py  NegativeBinomial.py  transforms.py
cell2location/models/: ArchetypalAnalysis.py  LocationModel.py  (+43 more)
docs/: README.md  cell2location.around_target.rst  cell2location.cluster_averages.rst  cell2location.distributions.rst  cell2location.downstream_models.rst  cell2location.location_models.rst  cell2location.location_models_pyro.rst  cell2location.models.rst  cell2location.other_architectures.rst  cell2location.plt.rst  cell2location.pymc3.rst  cell2location.pyro_infrastructure.rst  cell2location.reference_models.rst  cell2location.reference_models_torch.rst  cell2location.region.rst  cell2location.regression_models.rst  cell2location.rst  cell2location.utils.filtering.rst  cell2location.utils.rst  commonerrors.md  conf.py  dockersingularity.md  environment.yml  index.rst  installing_pymc3.md  modules.rst
notebooks/: cell2location_short_demo.ipynb  cell2location_short_demo_downstream.ipynb
pycell2location/: run_c2l.py
tests/: test_cell2location.py  test_import.py
(+94 files in other folders)
