[metadata]
name = cell2location
version = 0.06a
description = cell2location: High-throughput spatial mapping of cell types
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License, Version 2.0
url = https://github.com/BayraktarLab/cell2location
author = Vitalii Kleshchevnikov, Artem Shmatko, Emma Dann, Artem Lomakin, Alexander Aivazidis
author_email = vitalii.kleshchevnikov@sanger.ac.uk


[options]
include_package_data = True
packages = find:
install_requires =
    pyro-ppl>=1.7.0
    scvi-tools>=0.14.3<0.15.0
    torch>=1.9.0
    pymc3>=3.8<3.10
    arviz==0.10.0
    numpy
    pandas
    scanpy
    plotnine
    opencv-python


[options.extras_require]
dev =
    black>=21.4b0
    flake8
    pytest>=5.0
    pytest-cov
    isort
    pre-commit
tutorials =
    leidenalg>=0.8.0
    python-igraph
docs =
    sphinx==3.2.1
    nbsphinx==0.8.7
    sphinx_rtd_theme==0.5.2
    myst-parser==0.15.2
