[metadata]
name = cell2location
version = 0.1.3
description = cell2location: High-throughput spatial mapping of cell types
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License, Version 2.0
url = https://github.com/BayraktarLab/cell2location
author = Vitalii Kleshchevnikov, Artem Shmatko, Emma Dann, Artem Lomakin, Alexander Aivazidis
author_email = vitalii.kleshchevnikov@sanger.ac.uk


[options]
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    pyro-ppl>=1.8.0
    scvi-tools>=0.17.4
    torch>=1.9.0
    numpy
    pandas
    scanpy
    opencv-python

[options.extras_require]
dev =
    black==22.3
    flake8
    pytest>=5.0
    pytest-cov
    isort
    pre-commit
tutorials =
    leidenalg>=0.8.0
    python-igraph
docs =
    sphinx==3.2.1
    nbsphinx==0.8.7
    sphinx_rtd_theme==0.5.2
    myst-parser==0.15.2
    jinja2<3.1
